--- a/src/app/fruitlist/fruitlist.component.html
+++ b/src/app/fruitlist/fruitlist.component.html
@@ -11,11 +11,24 @@
                 <div>
                     <p><b>Bewertung:</b></p>
                     <div>
-                        <img src="./assets/img/stars/star.svg" alt="" srcset="">
+
+                        @for(count of [1,2,3,4,5]; track fruitlist) {
+                        
+
+                            @if(item.stars >= count){
+                                <img src="./assets/img/stars/star.svg" alt="" srcset="">
+                            }@else if (item.stars >= count - 0.5){
+                                <img src="./assets/img/stars/star-half.svg" alt="" srcset="">
+                            }@else {
+                                <img src="./assets/img/stars/star-empty.svg" alt="" srcset="">
+                            }
+                        }
+                        <!-- <img src="./assets/img/stars/star.svg" alt="" srcset="">
                         <img src="./assets/img/stars/star.svg" alt="" srcset="">
                         <img src="./assets/img/stars/star.svg" alt="" srcset="">
                         <img src="./assets/img/stars/star-half.svg" alt="" srcset="">
-                        <img src="./assets/img/stars/star-empty.svg" alt="" srcset="">
+                        <img src="./assets/img/stars/star-empty.svg" alt="" srcset=""> -->
+                        
                         <p>({{item.stars}})</p>
                     </div>
                 </div>
@@ -23,7 +36,11 @@
                 <div><b>Beschreibung:</b><br>{{item.description}}</div>
                 <div>
                     <div>
-                            <!-- <div><b>{{review.name}}:</b><br>{{review.text}}</div> -->
+                            @for(review of item.reviews; track review ) {
+                                <div><b>{{review.name}}:</b><br>{{review.text}}</div>
+                            } @empty {
+                                no comments
+                            }
                     </div>
                     <div><input type="text"><button><img src="./assets/img/arrow-35-32.png" alt="" srcset=""></button>
                     </div>
