--- a/src/app/fruitlist/singlefruit/singlefruit.component.html
+++ b/src/app/fruitlist/singlefruit/singlefruit.component.html
@@ -42,3 +42,5 @@
         </div>
     </div>
 </section>
+
+<!-- TO DO - SECTION EXPORTIREN(  14 - Praxis: @Input (Umbau in die singefruitcomponent) -->
