--- a/src/app/fruitlist/fruitlist.component.html
+++ b/src/app/fruitlist/fruitlist.component.html
@@ -1,7 +1,7 @@
 <div class="fruitlist_content">
     @for(singlefruit of fruitlist; track singlefruit.name; let index = $index){
 
-        <app-singlefruit []="singlefruit"></app-singlefruit>    
+        <app-singlefruit (onclick)="numLog(index)" []="singlefruit"></app-singlefruit>    
          
     }
 </div>
