--- a/src/app/fruitlist/fruitlist.component.html
+++ b/src/app/fruitlist/fruitlist.component.html
@@ -1,7 +1,6 @@
 <div class="fruitlist_content">
-    @for(singlefruit of fruitlist; track singlefruit.name; let index = $index){
-
-        <app-singlefruit (onclick)="numLog(index)" []="singlefruit"></app-singlefruit>    
-         
+    @for(singlefruit of fruitlistdata.fruitlist; track singlefruit.name; let index = $index){
+  
+      <app-singlefruit (fruitname)="addCommentToFruit($event, index)" [fruit]="singlefruit"></app-singlefruit>
     }
-</div>
+  </div>
