--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,3 @@
-<div class="app-container">
-    <app-header></app-header>
-    <main>
-      <!-- <a routerLink="/fruitlist">Fruitlist</a> -->
-      <router-outlet></router-outlet>
-    </main>
-    <app-footer></app-footer>
-  </div>
+<app-c></app-c>
+<router-outlet></router-outlet>
+<app-footer></app-footer>
