--- a/src/app/fruitlist/fruitlist.component.scss
+++ b/src/app/fruitlist/fruitlist.component.scss
@@ -8,3 +8,16 @@
     padding: 64px 0;
 }
 
+.fontColorGood{
+    color: green;
+}
+
+.fontColorBad{
+    color: red;
+}
+
+.bgWhite{
+    background-color: white;
+}
+
+
