--- a/src/app/fruitlist/singlefruit/singlefruit.component.html
+++ b/src/app/fruitlist/singlefruit/singlefruit.component.html
@@ -1,46 +1,49 @@
 <section class="singleFruitBox">
     <div>
-        <img src="./assets/img/fruits/{{fruit.img}}" alt="" srcset="">
+      <img src="./assets/img/fruits/{{fruit.img }}" alt="" srcset="" />
     </div>
     <div>
-        <h2> {{fruit.name}}</h2>
+      <h2>{{ fruit.name }}</h2>
+      <div>
+        <p><b>Bewertung:</b></p>
         <div>
-            <p><b>Bewertung:</b></p>
-            <div>
-
-                @for(count of [1,2,3,4,5]; track fruit) {
-                
-                    @if(fruit.stars >= count){
-                        <img src="./assets/img/stars/star.svg" alt="" srcset="">
-                    }@else if (fruit.stars >= count - 0.5){
-                        <img src="./assets/img/stars/star-half.svg" alt="" srcset="">
-                    }@else {
-                        <img src="./assets/img/stars/star-empty.svg" alt="" srcset="">
+            @for(count of [1, 2, 3, 4, 5]; track fruit){
+                @switch(true){
+                    @case(fruit.stars >= count){
+                        <img src="./assets/img/stars/star.svg" alt="Full Star" />
+                    }
+                    @case(fruit.stars >= count - 0.5 && fruit.stars < count){
+                        <img src="./assets/img/stars/star-half.svg" alt="Half Star" />
+                    }
+                    @case(fruit.stars < count - 0.5){
+                        <img src="./assets/img/stars/star-empty.svg" alt="Empty Star" />
                     }
                 }
-                <!-- <img src="./assets/img/stars/star.svg" alt="" srcset="">
-                <img src="./assets/img/stars/star.svg" alt="" srcset="">
-                <img src="./assets/img/stars/star.svg" alt="" srcset="">
-                <img src="./assets/img/stars/star-half.svg" alt="" srcset="">
-                <img src="./assets/img/stars/star-empty.svg" alt="" srcset=""> -->
-                
-                <p>({{fruit.stars}})</p>
-            </div>
-        </div>
-        <div><b>Art:</b><br>{{fruit.genus}}</div>
-        <div><b>Beschreibung:</b><br>{{fruit.description}}</div>
-        <div>
-            <div>
-                    @for(review of fruit.reviews; track review ) {
-                        <div><b>{{review.name}}:</b><br>{{review.text}}</div>
-                    } @empty {
-                        no comments
-                    }
-            </div>
-            <div><input type="text"><button><img src="./assets/img/arrow-35-32.png" alt="" srcset=""></button>
-            </div>
-        </div>
-    </div>
-</section>
+            }
 
-<!-- TO DO - SECTION EXPORTIREN(  14 - Praxis: @Input (Umbau in die singefruitcomponent) -->
+
+
+
+          <p> ({{ fruit.stars }})</p>
+        </div>
+      </div>
+      <div><b>Art:</b><br />{{ fruit.genus }}</div>
+      <div><b>Beschreibung:</b><br />{{ fruit.description }}</div>
+      <div>
+        <div>
+          @for(review of fruit.reviews; track review){
+          <div>
+            <b>{{ review.name }}:</b><br />{{ review.text }}
+          </div>
+          } @empty {
+          <div><b>Noch keine Kommentare vorhanden</b></div>
+          }
+        </div>
+        <div>
+          <input [(ngModel)]="inputData" type="text" /><button>
+            <img (click)="this.sendInputData()" src="./assets/img/arrow-35-32.png" alt="" srcset="" />
+          </button>
+        </div>
+      </div>
+    </div>
+  </section>
