--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,19 +1,30 @@
-/* You can add global styles to this file, and also import other style files */
-html, body {
-    height: 100%;
-    margin: 0;
-    display: flex;
-    flex-direction: column;
-    background-color: rgb(6,23,30);
-    color: whitesmoke;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-   
+body{
+  background-color: #06171E;
+}
 
-  }
-  
-  router-outlet {
-    flex: 1;
-  }
+*{
+  box-sizing: border-box;
+  margin: 0;
+  color: whitesmoke;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+*{
+  scrollbar-width: thin;
+  scrollbar-color: #FD5B4F #dddddd00;
+}
+
+::-webkit-scrollbar {
+  width: 4px;
+  height: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #FD5B4F;
+  border-radius: 2px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #00000000;
+  border: 1px solid #00000000;
+}
